Fixing menu collapse problem

--- a/site/3.3/src/site/resources/v1/css/global.css
+++ b/site/3.3/src/site/resources/v1/css/global.css
@@ -94,7 +94,7 @@ ul.topnav li span.subhover {background-position: center bottom; cursor: pointer;
 ul.topnav li ul.children {
 	list-style: none;
 	position: absolute; /*--Important - Keeps children from affecting main navigation flow--*/
-	left: 0; top: 35px;
+	left: 0; top: 34px;
 	background: #333;
 	margin: 0; padding: 0;
 	display: none;
